--- a/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
@@ -16,9 +16,9 @@
     </form> 
 <div id="saida"></div>
 
+<br />
 
-
-<table id="example" class="display" cellspacing="0" width="100%">
+<table id="example" class="example" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>Nome</th>
@@ -29,18 +29,6 @@
         </thead>
  
     </table>
-
-
-
-<br /><br />
-
-Nome
-<input id="searchNome" type="text" name="search" />
--
-CPF
-<input id="searchCPF" type="text" name="search" />
-<br />
-<div id="searchResults"></div>
 
 {% endblock %}
 {% block javascripts %}
@@ -112,11 +100,11 @@ CPF
                 var item = $.parseJSON(responseText);
                 
                 
-                
+                var date = new Date(item.data_nascimento)
                 
                 
                 var trHTML = '';
-                trHTML += '<tr><td><a href=\"' + Routing.generate('pessoa_view', {id: item.id}) + '\">' + item.nome + '</a></td><td>' + item.data_nascimento + '</td><td>' + item.email + '</td><td>' + item.cpf + '</td></tr>';
+                trHTML += '<tr><td><a href=\"' + Routing.generate('pessoa_view', {id: item.id}) + '\">' + item.nome + '</a></td><td>' + date.getDay()+'/'+(date.getMonth()+2)+'/'+date.getYear() + '</td><td>' + item.email + '</td><td>' + item.cpf + '</td></tr>';
                 
                 $('#example').append(trHTML);
                 $('#example').css('visibility','visible');
