--- a/src/CadpazBundle/Resources/public/css/geral.css
+++ b/src/CadpazBundle/Resources/public/css/geral.css
@@ -26,26 +26,27 @@ h2 {
 }
 /* Form wrapper styling */
 .form-wrapper {
-    width: 450px;
+    width: 260px;
     padding: 15px;
     /*margin: 50px auto 50px auto;*/
     background: #444;
     background: rgba(0,0,0,.2);
     border-radius: 10px;
     box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
+        float: right;
 }
  
 /* Form text input */
  
 .form-wrapper input {
-    width: 330px;
+    width: 140px;
     height: 20px;
     padding: 10px 5px;
     float: left;    
     font: bold 15px 'lucida sans', 'trebuchet MS', 'Tahoma';
     border: 0;
     background: #eee;
-    border-radius: 3px 0 0 3px;      
+    border-radius: 3px 0 0 3px;   
 }
  
 .form-wrapper input:focus {
@@ -124,16 +125,141 @@ h2 {
     padding: 0;
 }
 
+/*------------------------*/
+/* Form wrapper styling */
+.form-wrapper2 {
+    float: left;
+    width: 500px;
+    padding: 15px;
+    /*margin: 50px auto 50px auto;*/
+    background: #444;
+    background: rgba(0,0,0,.2);
+    border-radius: 10px;
+    box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
+}
+ 
+/* Form text input */
+ 
+.form-wrapper2 input {
+    width: 380px;
+    height: 20px;
+    padding: 10px 5px;
+    float: left;    
+    font: bold 15px 'lucida sans', 'trebuchet MS', 'Tahoma';
+    border: 0;
+    background: #eee;
+    border-radius: 3px 0 0 3px;      
+}
+ 
+.form-wrapper2 input:focus {
+    outline: 0;
+    background: #fff;
+    box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+}
+ 
+.form-wrapper2 input::-webkit-input-placeholder {
+   color: #999;
+   font-weight: normal;
+   font-style: italic;
+}
+ 
+.form-wrapper2 input:-moz-placeholder {
+    color: #999;
+    font-weight: normal;
+    font-style: italic;
+}
+ 
+.form-wrapper2 input:-ms-input-placeholder {
+    color: #999;
+    font-weight: normal;
+    font-style: italic;
+}    
+ 
+/* Form submit button */
+.form-wrapper2 button {
+    overflow: visible;
+    position: relative;
+    float: right;
+    border: 0;
+    padding: 0;
+    cursor: pointer;
+    height: 40px;
+    width: 110px;
+    font: bold 15px/40px 'lucida sans', 'trebuchet MS', 'Tahoma';
+    color: #fff;
+    text-transform: uppercase;
+    background: #d83c3c;
+    border-radius: 0 3px 3px 0;      
+    text-shadow: 0 -1px 0 rgba(0, 0 ,0, .3);
+}   
+   
+.form-wrapper2 button:hover{     
+    background: #e54040;
+}   
+   
+.form-wrapper2 button:active,
+.form-wrapper2 button:focus{   
+    background: #c42f2f;
+    outline: 0;   
+}
+ 
+.form-wrapper2 button:before { /* left arrow */
+    content: '';
+    position: absolute;
+    border-width: 8px 8px 8px 0;
+    border-style: solid solid solid none;
+    border-color: transparent #d83c3c transparent;
+    top: 12px;
+    left: -6px;
+}
+ 
+.form-wrapper2 button:hover:before{
+    border-right-color: #e54040;
+}
+ 
+.form-wrapper2 button:focus:before,
+.form-wrapper2 button:active:before{
+        border-right-color: #c42f2f;
+}      
+ 
+.form-wrapper2 button::-moz-focus-inner { /* remove extra button spacing for Mozilla Firefox */
+    border: 0;
+    padding: 0;
+}
+
+/*------------------------*/
 
 
 #example {
-    border: 1px solid;
-    /*border-color: #FF0000;*/
-    background-color: #00FF00;
     visibility: hidden;
+    width: 100%;
+    padding: 15px;
+    /*margin: 50px auto 50px auto;*/
+    background: #444;
+    background: rgba(0,0,0,.2);
+    border-radius: 10px;
+    box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
+}
+#example tbody tr:nth-child(odd)		{ background-color:#ddd; }
+#example tbody tr:nth-child(even)	{ background-color:#eee; }
+
+#example thead{
+    background-color: #aaa;
+    cursor: pointer;
 }
 
 #example tbody{
-    background-color: #ff0000;
+    background-color: #eee;
     cursor: pointer;
+}
+a{
+    text-decoration: none;
+    color: #000;
+}
+a:visited{
+    text-decoration: none;
+}
+
+#container {
+    width: 850px;
 }
